--- a/sub3suite/src/enums/asn/ASNEnum.ui
+++ b/sub3suite/src/enums/asn/ASNEnum.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>639</width>
-    <height>509</height>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -29,23 +29,10 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QComboBox" name="comboBoxEngine">
-       <property name="minimumSize">
-        <size>
-         <width>100</width>
-         <height>0</height>
-        </size>
+      <widget class="QLabel" name="labelOut">
+       <property name="text">
+        <string>Out:</string>
        </property>
-       <item>
-        <property name="text">
-         <string>Bgpview</string>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string>Country</string>
-        </property>
-       </item>
       </widget>
      </item>
      <item>
@@ -58,7 +45,7 @@
        </property>
        <item>
         <property name="text">
-         <string>ASN</string>
+         <string>ASN INFO</string>
         </property>
        </item>
        <item>
@@ -69,6 +56,28 @@
        <item>
         <property name="text">
          <string>ASN PREFIXES</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="labelModule">
+       <property name="text">
+        <string>Module:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBoxEngine">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
+       <item>
+        <property name="text">
+         <string>Bgpview</string>
         </property>
        </item>
       </widget>
@@ -99,6 +108,13 @@
        </property>
        <property name="text">
         <string>Stop</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="value">
+        <number>0</number>
        </property>
       </widget>
      </item>
@@ -185,6 +201,12 @@
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
+            </property>
+            <property name="font">
+             <font>
+              <weight>75</weight>
+              <bold>true</bold>
+             </font>
             </property>
             <property name="text">
              <string>Enumerated ASN:</string>
@@ -275,14 +297,16 @@
           <item>
            <widget class="QLineEdit" name="lineEditFilter"/>
           </item>
+          <item>
+           <widget class="QCheckBox" name="checkBoxRegex">
+            <property name="text">
+             <string>Regex</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
        </layout>
-      </widget>
-      <widget class="QWidget" name="tabGraph">
-       <attribute name="title">
-        <string>Graph</string>
-       </attribute>
       </widget>
       <widget class="QWidget" name="tabLogs">
        <attribute name="title">
