--- a/sub3suite/src/MainWindow.ui
+++ b/sub3suite/src/MainWindow.ui
@@ -25,6 +25,8 @@
 }
 
 QComboBox {
+    min-height: 19px;
+    max-height: 19px;
     border-style: outset;
     border-style: solid;
     border-color: rgb(25,25,25);
@@ -362,8 +364,11 @@ QPlainTextEdit {
 
 QTreeView::item{
     border-style: solid;
-    border-color: rgb(27, 27, 27);
-    border-width: 1px;
+    border-color: rgb(15,15,15);
+    border-top-width: 0px;
+    border-right-width: 1px;
+    border-left-width: 0px;
+    border-bottom-width: 1px;
 }
 
 QListWidget::item:selected,
@@ -629,7 +634,7 @@ QRadioButton:hover {
     border-color: rgb(50,50,50);
 }
 
-*[default_color=&quot;true&quot;] {
+*[s3s_color=&quot;true&quot;] {
     color: rgb(185, 185, 145);
 }
 
