--- a/sub3suite/res/themes/dark.css
+++ b/sub3suite/res/themes/dark.css
@@ -374,8 +374,11 @@ QHeaderView::section {
     height: 20px;
     background-color: rgba(80,80,80,90);
     border-style: solid;
-    border-width: 1px;
-    border-color: rgb(25,25,25);
+    border-color: rgb(15,15,15);
+    border-top-width: 1px;
+    border-right-width: 1px;
+    border-left-width: 0px;
+    border-bottom-width: 0px;
 }
 
 QPushButton,
