working on IPEnum

--- a/sub3suite/src/engines/dns/Dns.ui
+++ b/sub3suite/src/engines/dns/Dns.ui
@@ -424,6 +424,9 @@
              <property name="showDropIndicator" stdset="0">
               <bool>false</bool>
              </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
              <property name="selectionMode">
               <enum>QAbstractItemView::ExtendedSelection</enum>
              </property>
