--- a/sub3suite/src/engines/brute/Brute.ui
+++ b/sub3suite/src/engines/brute/Brute.ui
@@ -413,6 +413,9 @@
              <property name="dragDropOverwriteMode">
               <bool>false</bool>
              </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
              <property name="selectionMode">
               <enum>QAbstractItemView::ExtendedSelection</enum>
              </property>
