--- a/sub3suite/src/engines/osint/Osint.ui
+++ b/sub3suite/src/engines/osint/Osint.ui
@@ -563,7 +563,7 @@
            <bool>false</bool>
           </property>
           <property name="alternatingRowColors">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::ExtendedSelection</enum>
