--- a/sub3suite/src/enums/cidr/CidrEnum.ui
+++ b/sub3suite/src/enums/cidr/CidrEnum.ui
@@ -122,7 +122,7 @@
       <item>
        <widget class="QCheckBox" name="checkBoxMultipleTargets">
         <property name="text">
-         <string>Multiple Target</string>
+         <string>Multiple Targets</string>
         </property>
        </widget>
       </item>
@@ -165,9 +165,9 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="tabInfo">
+      <widget class="QWidget" name="tabResults">
        <attribute name="title">
-        <string>Info</string>
+        <string>Results</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <property name="leftMargin">
