--- a/sub3suite/src/enums/email/EmailEnum.ui
+++ b/sub3suite/src/enums/email/EmailEnum.ui
@@ -157,9 +157,9 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="tabInfo">
+      <widget class="QWidget" name="tabResults">
        <attribute name="title">
-        <string>Email Info</string>
+        <string>Results</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <property name="leftMargin">
