--- a/sub3suite/src/enums/mx/MXEnum.ui
+++ b/sub3suite/src/enums/mx/MXEnum.ui
@@ -152,9 +152,9 @@
       <property name="currentIndex">
        <number>0</number>
       </property>
-      <widget class="QWidget" name="tabInfo">
+      <widget class="QWidget" name="tabResults">
        <attribute name="title">
-        <string>Ip Info</string>
+        <string>Results</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout">
         <property name="leftMargin">
