--- a/sub3suite/src/engines/ssl/Ssl.ui
+++ b/sub3suite/src/engines/ssl/Ssl.ui
@@ -452,6 +452,26 @@
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout_7">
              <item>
+              <widget class="QComboBox" name="comboBoxFilter">
+               <property name="minimumSize">
+                <size>
+                 <width>100</width>
+                 <height>0</height>
+                </size>
+               </property>
+               <item>
+                <property name="text">
+                 <string>SSL</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Value</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item>
               <widget class="QLineEdit" name="lineEditFilter"/>
              </item>
              <item>
