--- a/sub3suite/src/enums/asn/ASNEnum.ui
+++ b/sub3suite/src/enums/asn/ASNEnum.ui
@@ -287,7 +287,7 @@
             </property>
             <item>
              <property name="text">
-              <string>Property</string>
+              <string>ASN</string>
              </property>
             </item>
             <item>
