--- a/sub3suite/src/engines/url/Url.ui
+++ b/sub3suite/src/engines/url/Url.ui
@@ -329,7 +329,7 @@
             </layout>
            </item>
            <item>
-            <widget class="QTreeView" name="tableViewResults">
+            <widget class="QTableView" name="tableViewResults">
              <property name="font">
               <font>
                <family>MS Shell Dlg 2</family>
@@ -372,14 +372,38 @@
              <property name="horizontalScrollMode">
               <enum>QAbstractItemView::ScrollPerPixel</enum>
              </property>
-             <property name="indentation">
-              <number>15</number>
+             <property name="sortingEnabled">
+              <bool>true</bool>
              </property>
-             <attribute name="headerMinimumSectionSize">
-              <number>200</number>
+             <attribute name="horizontalHeaderCascadingSectionResizes">
+              <bool>true</bool>
              </attribute>
-             <attribute name="headerDefaultSectionSize">
-              <number>230</number>
+             <attribute name="horizontalHeaderMinimumSectionSize">
+              <number>40</number>
+             </attribute>
+             <attribute name="horizontalHeaderDefaultSectionSize">
+              <number>40</number>
+             </attribute>
+             <attribute name="horizontalHeaderHighlightSections">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+              <bool>true</bool>
+             </attribute>
+             <attribute name="horizontalHeaderStretchLastSection">
+              <bool>true</bool>
+             </attribute>
+             <attribute name="verticalHeaderVisible">
+              <bool>false</bool>
+             </attribute>
+             <attribute name="verticalHeaderMinimumSectionSize">
+              <number>16</number>
+             </attribute>
+             <attribute name="verticalHeaderDefaultSectionSize">
+              <number>16</number>
+             </attribute>
+             <attribute name="verticalHeaderHighlightSections">
+              <bool>false</bool>
              </attribute>
             </widget>
            </item>
