--- a/sub3suite/src/engines/dns/Dns.ui
+++ b/sub3suite/src/engines/dns/Dns.ui
@@ -442,8 +442,14 @@
              <property name="uniformRowHeights">
               <bool>true</bool>
              </property>
+             <property name="sortingEnabled">
+              <bool>true</bool>
+             </property>
              <attribute name="headerVisible">
               <bool>false</bool>
+             </attribute>
+             <attribute name="headerCascadingSectionResizes">
+              <bool>true</bool>
              </attribute>
              <attribute name="headerMinimumSectionSize">
               <number>200</number>
